# aws-data-tools-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  OU Testing Exploration.ipynb  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  test.py  tox.ini
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  semantic.yml
.github/workflows/: ci.yml  codeql-analysis.yml
aws_data_tools/: __init__.py  api_calls.txt  client.py  conftest.py  utils.py
aws_data_tools/_schemas/: organizations.yaml  organizations_combined.yaml
aws_data_tools/builders/: organizations.py
aws_data_tools/cli/: TODO.md  __init__.py
aws_data_tools/client/: __init__.py  client.py
aws_data_tools/client/tests/: test_client.py
aws_data_tools/fixtures/: account_paths.txt  dynamodb_item.json  dynamodb_item_serialized.json  ou_paths.txt
aws_data_tools/models/: __init__.py  base.py  config.py  config_service.py  organizations.py  sns.py  sqs.py
aws_data_tools/models/organizations/: __init__.py  base.py  enums.py  utils.py
aws_data_tools/models/tests/: test_base.py  test_organizations.py
aws_data_tools/models/tests/fixtures/config/: oversized-item-change-notification.json  periodic-rule.json
aws_data_tools/service/organizations/models/: __init__.py
aws_data_tools/service/organizations/models/schemas/: account.yaml  effective_policy.yaml  organization.yaml  organizational_unit.yaml  parent.yaml  policy.yaml  policy_summary.yaml  policy_target_summary.yaml  policy_type_summary.yaml  root.yaml  tag.yaml
aws_data_tools/utils/: __init__.py  dynamodb.py  tags.py  validators.py
aws_data_tools/utils/tests/: test_dynamodb.py  test_tags.py
initaws.d/: start_orgs.sh
tests/: create_organization.sh  create_organization_ous.sh  fixtures.py  helpers.sh  load_organizations_ous.sh  organization_ous.txt  organization_ous_simple.txt  test.py.bak  test.sh
