[tool.poetry]
name = "aws_data_tools"
version = "0.1.1"
description = "A set of Python libraries for querying and transforming data from AWS APIs"
authors = ["Tim O'Guin <timoguin@proton.me>"]
license = "MIT"
maintainers = ["Tim O'Guin <timoguin@proton.me>"]
readme = "README.md"
homepage = "https://timoguin.github.io/aws-data-tools-py"
repository = "https://github.com/timoguin/aws-data-tools-py"
documentation = "https://timoguin.github.io/aws-data-tools-py"
keywords = ["aws", "etl", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = [
    "**/conftest.py", 
    "**/fixtures",
    "**/tests",
    "**/**/tests"
]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
Changelog = "https://github.com/timoguin/aws-data-tools-py/blob/main/CHANGELOG.md"
Documentation = "https://timoguin.github.io/aws-data-tools-py"
Source = "https://github.com/timoguin/aws-data-tools-py"
Tracker = "https://github.com/timoguin/aws-data-tools-py/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4"
boto3 = "^1.34"
dacite = "^1.8"
pyhumps = "^3.8"
PyYAML = "^6.0"
structlog = "^24.1"

# Optional extras: graphviz
graphviz = {version = "^0.20", optional = true, extras=["all", "graphviz"]}

# Optional extras: cli
click = {version = "^8.1", optional = true, extras=["all", "cli"]}
click-completion = {version = "^0.5", optional = true, extras=["all", "cli"]}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
coverage = "^7.4.3"
flakehell = "^0.9.0"
isort = "^5.13.2"
mccabe = "^0.7.0"
moto = "^5.0.2"
pycodestyle = "^2.11.1"
pyflakes = "^3.2.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-custom-exit-code = "^0.3.0"
tox-poetry = "^0.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
blacken-docs = "^1.16.0"
mkdocs = "^1.5.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-material = "^9.5.12"

[tool.poetry.extras]
all = [
    "click",
    "click-completion",
    "graphviz"
]
cli = ["click", "click-completion"]
graphviz = ["graphviz"]

[tool.poetry.scripts]
awsdata = "aws_data_tools.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.flakehell]
format = "colored"
max_line_length = 88
show_source = true

# Fixes a flake8 compat bug: https://github.com/flakehell/flakehell/issues/10
extended_default_ignore = []

[tool.flakehell.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.coverage.run]
source = ["aws_data_tools"]
omit = [
    "*test*",
    "**/__init__.py",
    "client/__init__.py",
    "models/__init__.py",
    "utils/__init__.py"
]

[tool.coverage.report]
omit = [
    "*test*",
    "__init__.py",
    "client/__init__.py",
    "models/__init__.py",
    "utils/__init__.py"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
